--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,13 +7,57 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>profile</ion-title>
-    <div> Test </div>
+    <ion-title>Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="speaker-detail">
+  <div text-center>
+    <img src="assets/img/avatar.png"><br>
+    <button ion-button icon-only clear small>
+      <ion-icon name="star"></ion-icon>
+    </button>
+    <button ion-button icon-only clear small>
+      <ion-icon name="star"></ion-icon>
+    </button>
+    <button ion-button icon-only clear small>
+      <ion-icon name="star"></ion-icon>
+    </button>
+    <button ion-button icon-only clear small>
+      <ion-icon name="star"></ion-icon>
+    </button>
+    <button ion-button icon-only clear small>
+      <ion-icon name="star"></ion-icon>
+    </button>
+  </div>
+<div>
+	
+
+</div>
+<ion-card>
+  <ion-card-header>
+    User Info
+  </ion-card-header>
+
+  <ion-list>
+    <button ion-item>
+      <ion-icon name="cafe" item-start></ion-icon>
+      Cafe
+    </button>
+
+    <button ion-item>
+      <ion-icon name="paw" item-start></ion-icon>
+      My Trip
+    </button>
+
+    <button ion-item>
+      <ion-icon name="planet" item-start></ion-icon>
+      My Trip History
+    </button>
+
+  </ion-list>
+</ion-card>
 
 </ion-content>
