--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -14,10 +14,10 @@
 	</div>
 
 	<form #signupForm="ngForm" novalidate>
-		<ion-list no-lines>
+		<ion-list>
 			<ion-item>
 				<ion-label stacked color="columbusGrey">First Name</ion-label>
-				<ion-input [(ngModel)]="signupData.firstname" name="firstname" type="text" #firstname="ngModel" required>
+				<ion-input [(ngModel)]="signupData.firstName" name="firstname" type="text" #firstname="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="firstname.valid || submitted == false" color="danger" padding-left>
@@ -26,7 +26,7 @@
 
 			<ion-item>
 				<ion-label stacked color="columbusGrey">Last Name</ion-label>
-				<ion-input [(ngModel)]="signupData.lastname" name="lastname" type="text" #lastname="ngModel" required>
+				<ion-input [(ngModel)]="signupData.lastName" name="lastname" type="text" #lastname="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="lastname.valid || submitted == false" color="danger" padding-left>
@@ -35,7 +35,7 @@
 
 			<ion-item>
 				<ion-label stacked color="columbusGrey">Age</ion-label>
-				<ion-input [(ngModel)]="signupData.age" name="phone" type="text" #phone="ngModel" required>
+				<ion-input [(ngModel)]="signupData.age" (ngModelChange)="signupData.age=toNum($event)" name="age" type="number" #age="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="phone.valid || submitted == false" color="danger" padding-left>
