working login/signup integration

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -47,7 +47,7 @@
 				Not a Member? Register Now
 			</p>
         <p ion-text [hidden]="checkStatus()==Error" color="danger" align="center">
-          {{errresponse.message}}
+          {{errMessage}}
         </p>
 			</ion-col>
 		</ion-row>
