--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -85,7 +85,7 @@
 	</form>
 
   <p ion-text [hidden]="checkStatus()==Error" color="danger" align="center">
-    {{errresponse.message}}
+    {{errMessage}}
   </p>
 
 </ion-content>
