integrate profile API

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -16,6 +16,9 @@
 <ion-content padding class="speaker-detail">
   <div text-center>
     <img src="assets/img/avatar.png"><br>
+    <p ion-text color="danger" align="center">
+    {{name}}
+    </p>
     <button ion-button icon-only clear small>
       <ion-icon name="star"></ion-icon>
     </button>
