--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -18,6 +18,18 @@
     <img src="assets/img/avatar.png" alt="avatar">
     <h2>{{name}}</h2>
 
+    <!-- <button ion-button full large (click)="rateMe()">Rate Me</button> -->
+    <rating [(ngModel)]="rate" 
+        readOnly="false"
+        max="5"
+        emptyStarIconName="star-outline"
+        halfStarIconName="star-half"
+        starIconName="star"
+        nullable="false"
+        value="3"
+        (ngModelChange)="onModelChange($event)">
+    </rating>
+
     <button ion-button icon-only clear small>
       <ion-icon name="star"></ion-icon>
     </button>
