--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -5,6 +5,7 @@ See http://ionicframework.com/docs/components/#navigation for more info on
 Ionic pages and navigation.
 -->
 <ion-header>
+
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -22,16 +23,17 @@ Ionic pages and navigation.
   <ion-content no-padding>
     <div id="floating-panel">
       <ion-row>
-        <ion-col col-6 no-padding>
+        <ion-col col-md-12 no-padding>
           <ion-item>
-            <ion-searchbar [(ngModel)]="search.location" animated='true' placeholder="Destination Location"></ion-searchbar>
+            <ion-searchbar id="txtHome"  placeholder="Destination" no-border no-lines></ion-searchbar>
+            <!--<ion-input id="txtHome" type="text"></ion-input>-->
           </ion-item>
         </ion-col>
-        <ion-col col-6 no-padding>
-          <ion-item>
-            <ion-searchbar [(ngModel)]="search.location" placeholder="source Location" no-border no-lines></ion-searchbar>
-          </ion-item>
-        </ion-col>
+        <!--<ion-col col-6 no-padding>-->
+          <!--<ion-item>-->
+            <!--<ion-searchbar (click)="showAddressModal()" [(ngModel)]="address.place" placeholder="source Location" no-border no-lines></ion-searchbar>-->
+          <!--</ion-item>-->
+        <!--</ion-col>-->
       </ion-row>
       <ion-item>
         <ion-label>Commute Type </ion-label>
@@ -58,7 +60,9 @@ Ionic pages and navigation.
         <!--<option value="los angeles, ca">Los Angeles</option>-->
       <!--</select>-->
     </div>
-    <div #map id="map"></div>
+    <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
+      <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+    </agm-map>
   </ion-content>
   <!--<ion-header>-->
   <!--<ion-navbar no-border-bottom>-->
