--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -40,7 +40,19 @@ Ionic pages and navigation.
         </ion-select>
       </ion-item>
     </div>
+    <div class="floatButton">
+      <!-- this fab is placed at bottom right -->
+      <ion-fab bottom right>
+        <button ion-fab><ion-icon name="menu"></ion-icon></button>
+        <ion-fab-list side="top">
+          <button ion-fab color="columbusRed"><ion-icon name="search"></ion-icon></button>
+          <button ion-fab color="columbusRed"><ion-icon name="add"></ion-icon></button>
+        </ion-fab-list>
+      </ion-fab>
+
+    </div>
     <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
       <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
     </agm-map>
+
   </ion-content>
