--- a/src/pages/schedule-filter/schedule-filter.html
+++ b/src/pages/schedule-filter/schedule-filter.html
@@ -40,7 +40,7 @@
       <ion-col col-6>
         <ion-item>
           <ion-label>Max Age</ion-label>
-          <ion-select [(ngModel)]="selectedpref.maxiage">
+          <ion-select [(ngModel)]="selectedpref.maxiage" (ionChange)="validate()">
             <ion-option *ngFor="let a of pref.maxagevalue" [value]="a.val" [selected]="a.display">{{a.val}}</ion-option>
           </ion-select>
         </ion-item>
@@ -67,19 +67,19 @@
       <ion-col col-6>
         <ion-item>
           <ion-label>Max group</ion-label>
-          <ion-select [(ngModel)]="selectedpref.maxigroup">
-            <ion-option *ngFor="let a of pref.maxgroupvalue" [value]="a.val" [selected]="a.display">{{a.val}}</ion-option>
+          <ion-select [(ngModel)]="selectedpref.maxigroup" (ionChange)="validate()">
+            <ion-option *ngFor="let a of pref.maxgroupvalue" [value]="a.val" [selected]="a.display" >{{a.val}}</ion-option>
           </ion-select>
         </ion-item>
       </ion-col>
     </ion-row>
 
-    <ion-item>
-      <ion-label>Group size</ion-label>
-      <ion-select [(ngModel)]="selectedpref.group">
-        <ion-option *ngFor="let a of pref.mingroupvalue" [value]="a.val" [selected]="a.display">{{a.val}}</ion-option>
-      </ion-select>
-    </ion-item>
+    <!--<ion-item>-->
+      <!--<ion-label>Group size</ion-label>-->
+      <!--<ion-select [(ngModel)]="selectedpref.group">-->
+        <!--<ion-option *ngFor="let a of pref.mingroupvalue" [value]="a.val" [selected]="a.display">{{a.val}}</ion-option>-->
+      <!--</ion-select>-->
+    <!--</ion-item>-->
 
   </ion-list>
 
