add single trip page

--- a/src/pages/trip/trip.html
+++ b/src/pages/trip/trip.html
@@ -15,5 +15,8 @@
 
 <ion-content padding>
 	<div> Trip </div>
-
+	<div>{{tripType}}</div>
+	<div>{{tripStops}}</div>
+	<div>{{groupSize}}</div>
+	<div>{{startPoint}}</div>
 </ion-content>
