--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -48,6 +48,10 @@
                 <ion-row>Destination Co-ordinates: {{trip.tripStops[1].coordinate.x}}, {{trip.tripStops[1].coordinate.y}}</ion-row>
                 </ion-note>
 
+                <ion-item align-self-center="">
+                  <button align-self-center="10" padding ion-button color="danger" round>Join Group</button>
+                </ion-item>
+
                 <button ion-item (click)="goToSpeakerDetail(speaker)">
                   <h3></h3>
                 </button>
