--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -48,7 +48,7 @@
                 <ion-row>Destination Co-ordinates: {{trip.tripStops[1].coordinate.x}}, {{trip.tripStops[1].coordinate.y}}</ion-row>
                 </ion-note>
 
-                <ion-item align-self-center="">
+                <ion-item align-self-center="2">
                   <button align-self-center="10" padding ion-button color="danger" round>Join Group</button>
                 </ion-item>
 
