--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -31,6 +31,11 @@
               </button>
             </ion-card-header>
 
+            <ion-row>
+              <ion-col>Gender: {{trip.preferences[2].value}}</ion-col>
+              <ion-col>Age Range Seletion: {{trip.preferences[0].value}}</ion-col>
+            </ion-row>
+
             <ion-card-content padding word-wrap class="outer-content">
               <ion-list>
                 <ion-list-header>Trip Preferances</ion-list-header>
