integrate join API

--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -45,7 +45,7 @@
           </ion-row>
 
           <ion-item align-self-center="0">
-          <button align-self-center="10" padding ion-button color="columbusRed">Join Group</button>
+          <button align-self-center="10" padding ion-button color="columbusRed" (click)="joinTrip(trip)">Join Group</button>
           </ion-item>
 
         </ion-card-content>
