--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -10,7 +10,7 @@
   <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
 
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-1.png" class="slide-image"/>
+      <img src="assets/img/Columbus logo name.png" class="slide-image"/>
       <h2 class="slide-title">
         Welcome to <b>Columbus</b>
       </h2>
@@ -19,21 +19,11 @@
       </p>
     </ion-slide>
 
-    <ion-slide>
-      <img src="assets/img/ica-slidebox-img-2.png" class="slide-image"/>
-      <h2 class="slide-title" >What is Columbus?</h2>
-      <p><b>Columbus</b> is a platform which allows users to create and join groups for their frequent travels and commutes</p>
-    </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
-      <h2 class="slide-title">What do I do with Columbus?</h2>
+      <h2 class="slide-title">Ready to Commute?</h2>
       <p><b>You</b> can join groups and create groups with nearby friends for daily commute or an instant journey plans. You can co-ordinate, manage and plan your route, making the journey worth remembering. </p>
-    </ion-slide>
-
-    <ion-slide>
-      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
       <button ion-button icon-end large clear (click)="startApp()">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
