--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -15,6 +15,20 @@
 
 
 <ion-content *ngIf="isLoaded">
+
+  <ion-row>
+    <ion-col col-10 no-padding>
+        <ion-searchbar id="txtHome"  placeholder="Search by Destination" no-border no-lines></ion-searchbar>
+    </ion-col>
+
+    <ion-col col-2 >
+
+        <button col-10 no-padding ion-button color="columbusRed" ><ion-icon name="search"></ion-icon></button>
+        <!--<ion-input id="txtHome" type="text"></ion-input>-->
+
+    </ion-col>
+
+  </ion-row>
   <ion-list [virtualScroll]="tripdata" approxItemHeight="450px">
 
     <ion-item *virtualItem="let trip">
