add default value

--- a/src/pages/trip/trip.html
+++ b/src/pages/trip/trip.html
@@ -15,11 +15,6 @@
 
 
 <ion-content padding>
-	<!-- <div>{{tripType}}</div>
-	<div>{{groupSize}}</div>
-	<div>{{startPoint}}</div>
-  <div>{{stopPoint}}</div> -->
-
   <ion-card >
     <ion-card-title padding>Trip Details</ion-card-title>
     <ion-card-header>
@@ -29,20 +24,14 @@
     <ion-card-content>
       <ion-row>
         <ion-col><b>Trip Type: </b> {{tripType}}</ion-col>
-        <ion-col><b>Group Size: </b> {{groupSize}}</ion-col>
+        <ion-col><b>GROUP_MIN_SIZE: </b> {{group_max_size}}</ion-col>
+        <ion-col><b>GROUP_MIN_SIZE: </b> {{group_min_size}}</ion-col>
       </ion-row>
       <ion-row>
         <ion-col><b>Start Point:</b> {{startPoint}}</ion-col>
         <ion-col><b>Stop Point:</b> {{stopPoint}}</ion-col>
       </ion-row>
-
-
-
-
     </ion-card-content>
-
-
-
 
   </ion-card>
 
