--- a/src/pages/joinedtrips/joinedtrips.html
+++ b/src/pages/joinedtrips/joinedtrips.html
@@ -1,17 +1,16 @@
 <!--
-  Generated template for the AlltripsPage page.
+  Generated template for the JoinedtripsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>All Trips</ion-title>
+    <ion-title>My Joined Trips</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -29,8 +28,8 @@
       <!--<ion-input id="txtHome" type="text"></ion-input>-->
 
     </ion-col>
-  </ion-row>
 
+  </ion-row>
   <ion-list [virtualScroll]="tripdata" approxItemHeight="450px">
 
     <ion-item *virtualItem="let trip">
@@ -60,7 +59,7 @@
           </ion-row>
 
           <ion-item align-self-center="0">
-            <button align-self-center="10" padding ion-button color="columbusRed" (click)="joinTrip(trip)">Join Trip</button>
+            <button align-self-center="10" padding ion-button color="columbusRed" (click)="leaveTrip(trip)">Leave Trip</button>
           </ion-item>
 
         </ion-card-content>
