--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Journeys</ion-title>
+    <ion-title>My Created Trips</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -58,7 +58,7 @@
           </ion-row>
 
           <ion-item align-self-center="0">
-          <button align-self-center="10" padding ion-button color="columbusRed" (click)="joinTrip(trip)">Join Group</button>
+          <button align-self-center="10" padding ion-button color="columbusRed" (click)="cancelTrip(trip)">Cancel Trip</button>
           </ion-item>
 
         </ion-card-content>
