--- a/src/pages/matched-trips/matched-trips.html
+++ b/src/pages/matched-trips/matched-trips.html
@@ -54,7 +54,7 @@
           </ion-row>
 
           <ion-item align-self-center="0">
-          <button align-self-center="10" padding ion-button color="columbusRed" (click)="cancelTrip(trip)">Cancel Trip</button>
+          <button align-self-center="10" padding ion-button color="columbusRed" (click)="joinTrip(trip)">Join Trip</button>
           </ion-item>
 
         </ion-card-content>
