--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -45,8 +45,8 @@
             <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
           </ion-row>
           <ion-row>
-            <ion-col><b>Source:</b> {{trip.tripStops[0].coordinate.x}}, {{trip.tripStops[0].coordinate.y}}</ion-col>
-            <ion-col><b>Destination:</b> {{trip.tripStops[1].coordinate.x}}, {{trip.tripStops[1].coordinate.y}}</ion-col>
+            <ion-col><b>Source:</b> {{trip.tripStops[0].coordinate.lat}}, {{trip.tripStops[0].coordinate.lng}}</ion-col>
+            <ion-col><b>Destination:</b> {{trip.tripStops[1].coordinate.lat}}, {{trip.tripStops[1].coordinate.lng}}</ion-col>
           </ion-row>
           <ion-row>
             <ion-col>
