--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 	<div class="logo">
-		<img src="assets/img/appicon.svg" alt="Ionic logo">
+		<img src="assets/img/columbus_logo.png" alt="Columbus logo">
 	</div>
 
 	<form #loginForm="ngForm" novalidate>
@@ -17,7 +17,7 @@
 
 		<ion-list>
 			<ion-item>
-				<ion-label floating stacked color="columbusGrey">EmailId</ion-label>
+				<ion-label floating stacked color="columbusGrey">Username</ion-label>
 				<ion-input [(ngModel)]="login.loginId" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
 					required>
 				</ion-input>
