--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -5,7 +5,6 @@ See http://ionicframework.com/docs/components/#navigation for more info on
 Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -17,9 +16,7 @@ Ionic pages and navigation.
       </button>
     </ion-buttons>
   </ion-navbar>
-
 </ion-header>
-
 <ion-content no-padding>
   <div id="floating-panel">
 
@@ -30,9 +27,9 @@ Ionic pages and navigation.
         </ion-col>
         <ion-col>
           <div class="searchBtn">
-          <button ion-button icon-left clear (click)="setCurrentPositionforSrc()">
-            <ion-icon name="locate" style=" color: #fd7272"></ion-icon>
-          </button>
+            <button ion-button icon-left clear (click)="setCurrentPositionforSrc()">
+              <ion-icon name="locate" style=" color: #fd7272"></ion-icon>
+            </button>
           </div>
         </ion-col>
       </ion-row>
@@ -43,30 +40,34 @@ Ionic pages and navigation.
         </ion-col>
       </ion-row>
     </ion-item>
-      <ion-item no-lines>
-        <ion-label>Commute Type </ion-label>
-        <ion-select [(ngModel)]="end" id="end" (change)="calculateAndDisplayRoute()">
-          <ion-option value="bus">Bus</ion-option>
-          <ion-option value="walk">Walk</ion-option>
-          <ion-option value="taxi">Taxi</ion-option>
-          <ion-option value="Luas">Luas</ion-option>
-        </ion-select>
-      </ion-item>
-    </div>
-    <div class="floatButton">
-      <!-- this fab is placed at bottom right -->
-      <ion-fab bottom right>
-        <button ion-fab><ion-icon name="menu"></ion-icon></button>
-        <ion-fab-list side="top">
-          <button ion-fab color="columbusRed" (click)="searchTrip()"><ion-icon name="search"></ion-icon></button>
-          <button ion-fab color="columbusRed" (click)="onCreateTrip()"><ion-icon name="add"></ion-icon></button>
-        </ion-fab-list>
-      </ion-fab>
-
-    </div>
-    <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
-      <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
-    </agm-map>
-
-  </ion-content>
+    <ion-item no-lines>
+      <ion-label>Commute Type</ion-label>
+      <ion-select [(ngModel)]="end" id="end" (change)="calculateAndDisplayRoute()">
+        <ion-option value="bus">Bus</ion-option>
+        <ion-option value="walk">Walk</ion-option>
+        <ion-option value="taxi">Taxi</ion-option>
+        <ion-option value="Luas">Luas</ion-option>
+      </ion-select>
+    </ion-item>
+  </div>
+  <div class="floatButton">
+    <!-- this fab is placed at bottom right -->
+    <ion-fab bottom right>
+      <button ion-fab>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-fab-list side="top">
+        <button ion-fab color="columbusRed" (click)="searchTrip()">
+          <ion-icon name="search"></ion-icon>
+        </button>
+        <button ion-fab color="columbusRed" (click)="onCreateTrip()">
+          <ion-icon name="add"></ion-icon>
+        </button>
+      </ion-fab-list>
+    </ion-fab>
+  </div>
+  <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
+    <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+  </agm-map>
+</ion-content>
 
