--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -10,7 +10,7 @@
 <ion-content class="login-page">
 
 	<div class="logo">
-		<img src="assets/img/appicon.svg" alt="Ionic Logo">
+    <img src="assets/img/columbus_logo.png" alt="Columbus logo">
 	</div>
 
 	<form #signupForm="ngForm" novalidate>
