--- a/src/pages/trip/trip.html
+++ b/src/pages/trip/trip.html
@@ -18,7 +18,7 @@
   <ion-card >
     <ion-card-title padding>Trip Details</ion-card-title>
     <ion-card-header>
-      <b>New Trip Created for you: </b>
+      <b>Trip Details for you: </b>
     </ion-card-header>
 
     <ion-card-content>
