Debug and error handling

--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -66,6 +66,11 @@
           <button align-self-center="10" padding ion-button color="columbusRed" (click)="leaveTrip(trip)">Leave Trip</button>
 
             </ion-col>
+          <ion-col>
+
+            <button align-self-center="10" padding ion-button color="columbusRed" (click)="rateTrip(trip)">Rate Trip</button>
+
+          </ion-col>
         </ion-card-content>
 
         <ion-row>
