--- a/src/pages/trip/trip.html
+++ b/src/pages/trip/trip.html
@@ -24,7 +24,7 @@
     <ion-card-content>
       <ion-row>
         <ion-col><b>Trip Type: </b> {{tripType}}</ion-col>
-        <ion-col><b>GROUP_MIN_SIZE: </b> {{group_max_size}}</ion-col>
+        <ion-col><b>GROUP_MAX_SIZE: </b> {{group_max_size}}</ion-col>
         <ion-col><b>GROUP_MIN_SIZE: </b> {{group_min_size}}</ion-col>
       </ion-row>
       <ion-row>
