--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -38,9 +38,12 @@
         <ion-card-title>{{trip.tripId}}</ion-card-title>
         <ion-card-header>
           <b>Preferences</b>
+          <p>Trip Creator: {{trip.admin}} </p>
         </ion-card-header>
 
-        <ion-card-content>
+        <ion-card-content text-wrap="2">
+
+
           <ion-row>
             <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
           </ion-row>
@@ -56,6 +59,7 @@
               <b>Trip Type:</b> {{trip.tripType}}
             </ion-col>
           </ion-row >
+
           <ion-col>
 
           <button align-self-center="10" padding ion-button color="columbusRed" (click)="cancelTrip(trip)">Cancel Trip</button>
