--- a/src/pages/pending-requests/pending-requests.html
+++ b/src/pages/pending-requests/pending-requests.html
@@ -12,75 +12,25 @@
 
 
 <ion-content *ngIf="isLoaded" padding>
-  <ion-row>
-    <ion-col col-10 no-padding>
-      <ion-searchbar id="txtHome"  placeholder="Search by Destination" no-border no-lines></ion-searchbar>
-    </ion-col>
-
-    <ion-col col-2 >
-
-      <button col-10 no-padding ion-button color="columbusRed" ><ion-icon name="search"></ion-icon></button>
-      <!--<ion-input id="txtHome" type="text"></ion-input>-->
-
-    </ion-col>
-  </ion-row>
-
-  <ion-list [virtualScroll]="tripdata" approxItemHeight="450px">
-
-    <ion-item *virtualItem="let trip">
-
-
+  <ion-list [virtualScroll]="pendingRequests" approxItemHeight="450px">
+    <ion-item *virtualItem="let request">
       <ion-card class = "searchList">
-        <ion-card-title>{{trip.tripId}}</ion-card-title>
+        <ion-card-title>{{request.requestFrom}}</ion-card-title>
         <ion-card-header>
-          <b>Preferences</b>
+          <b>Details</b>
         </ion-card-header>
-
         <ion-card-content>
           <ion-row>
-            <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
+            <ion-col><b>requestFrom:</b> {{request.requestFrom}} </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col><b>Source:</b> {{trip.tripStops[0].coordinate.lat}}, {{trip.tripStops[0].coordinate.lng}}</ion-col>
-            <ion-col><b>Destination:</b> {{trip.tripStops[1].coordinate.lat}}, {{trip.tripStops[1].coordinate.lng}}</ion-col>
+            <ion-col><b>tripId:</b> {{request.tripId}} </ion-col>
           </ion-row>
-          <ion-row>
-            <ion-col>
-              <b>Gender:</b> {{trip.preferences[3].value}}
-            </ion-col>
-            <ion-col>
-              <b>Trip Type:</b> {{trip.tripType}}
-            </ion-col>
-          </ion-row>
-
           <ion-item align-self-center="0">
-            <button align-self-center="10" padding ion-button color="columbusRed" (click)="joinTrip(trip)">Join Trip</button>
+            <button align-self-center="10" padding ion-button color="columbusRed" (click)="confirmRequest(request)">Confirm</button>
           </ion-item>
-
         </ion-card-content>
-
-        <ion-row>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="thumbs-up"></ion-icon>
-              <div>12 Likes</div>
-            </button>
-          </ion-col>
-          <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="text"></ion-icon>
-              <div>4 Comments</div>
-            </button>
-          </ion-col>
-        </ion-row>
-
-
       </ion-card>
-
-
     </ion-item>
-
   </ion-list>
-
-
 </ion-content>
