--- a/src/pages/alltrips/alltrips.html
+++ b/src/pages/alltrips/alltrips.html
@@ -73,10 +73,14 @@
             </button>
           </ion-col>
           <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon name="text"></ion-icon>
-              <div>4 Comments</div>
-            </button>
+            <rating [(ngModel)] = trip.tripRating
+                    readOnly="true"
+                    max="5"
+                    emptyStarIconName="star-outline"
+                    halfStarIconName="star-half"
+                    starIconName="star"
+                    nullable="false">
+            </rating>
           </ion-col>
         </ion-row>
 
