--- a/src/pages/journey/journey.html
+++ b/src/pages/journey/journey.html
@@ -59,8 +59,16 @@
               <b>Trip Type:</b> {{trip.tripType}}
             </ion-col>
           </ion-row >
+          <ion-row>
+            <ion-col>
+              <b>Already Joined Members: </b>
+              {{trip.tripUsersLoginIds}}
+            </ion-col>
 
-          <ion-col>
+          </ion-row>
+
+
+          <ion-col padding>
 
           <button align-self-center="10" padding ion-button color="columbusRed" (click)="cancelTrip(trip)">Cancel Trip</button>
 
@@ -75,9 +83,14 @@
             <button align-self-center="10" padding ion-button color="columbusRed" (click)="rateTrip(trip)">Rate Trip</button>
 
           </ion-col>
+
+
         </ion-card-content>
 
-        <ion-row>
+
+
+
+        <ion-row padding>
         <ion-col>
         <button ion-button icon-left clear small>
         <ion-icon name="thumbs-up"></ion-icon>
