--- a/src/pages/alltrips/alltrips.html
+++ b/src/pages/alltrips/alltrips.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header margin-bottom="20px">
 
 
   <ion-navbar>
@@ -37,13 +37,31 @@
 
 
       <ion-card class = "searchList">
-        <ion-card-title>{{trip.tripId}}</ion-card-title>
+        <ion-card-title>
+          {{trip.tripId}}
+
+        </ion-card-title>
         <ion-card-header>
           <b>Preferences</b>
           <p>Trip Creator: {{trip.admin}} </p>
+
         </ion-card-header>
 
         <ion-card-content text-wrap="2">
+
+            <ion-row padding>
+              <b>Trip Rating:
+                <rating [(ngModel)] = trip.tripRating
+                        readOnly="true"
+                        max="5"
+                        emptyStarIconName="star-outline"
+                        halfStarIconName="star-half"
+                        starIconName="star"
+                        nullable="false">
+                </rating>
+              </b>
+            </ion-row>
+
           <ion-row>
             <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
           </ion-row>
@@ -53,11 +71,34 @@
           </ion-row>
           <ion-row>
             <ion-col>
-              <b>Gender:</b> {{trip.preferences[3].value}}
+              <b>Preferred Gender:</b> {{trip.preferences[3].value}}
             </ion-col>
             <ion-col>
               <b>Trip Type:</b> {{trip.tripType}}
             </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+              <b>Group Age Range: </b>
+              {{trip.preferences[0].value}}
+            </ion-col>
+
+          </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <b>Group Size Range: </b>
+              {{trip.preferences[1].value}}-{{trip.preferences[2].value}}
+            </ion-col>
+
+          </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <b>Schedule Repetition </b>
+              {{trip.preferences[6].value}}
+            </ion-col>
+
           </ion-row>
 
           <ion-item align-self-center="0">
@@ -73,16 +114,7 @@
               <div>12 Likes</div>
             </button>
           </ion-col>
-          <ion-col>
-            <rating [(ngModel)] = trip.tripRating
-                    readOnly="true"
-                    max="5"
-                    emptyStarIconName="star-outline"
-                    halfStarIconName="star-half"
-                    starIconName="star"
-                    nullable="false">
-            </rating>
-          </ion-col>
+
         </ion-row>
 
 
